--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ section button svg path:hover {
 }
 
 .cardsColorDark svg path {
-  fill: #cbdcdf
+  fill: #51647a
 }
 
 .cardsColorDark svg path + path {
