--- a/style.css
+++ b/style.css
@@ -7,16 +7,11 @@
 :root {
   box-sizing: 62.5%;
   --cc-color-icon: #003f69;
-
   --fc-heading: #323238;
-
   --fs-heading: 12.6rem;
-
   --ff-heading: 'Roboto', sans-serif;
-
   --colorbg-image-start: #003f69;
   --color-image-inside-start: #FFFFFF;
-
   --colorbg-image-default: #E1E1E6;
   --color-image-inside-default: #323238;
 }
@@ -24,7 +19,6 @@
 body {
   width: 100vw;
   height: 100vh;
-  display: flex;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,7 +30,6 @@ max-height: 33.6rem;
 display: grid;
 grid-template-areas: 
 'A A B';
-/* margin-top: 10rem; */
 }
 
 .content-timer {
@@ -73,6 +66,7 @@ input {
   position: relative;
   bottom: 3.2rem
 }
+
 input[type='range']::-webkit-slider-runnable-track{
   height: .2rem;
   background: rgb(5, 5, 5);
@@ -164,3 +158,131 @@ section button svg path:hover {
 .hideDark svg path + path {
   fill: white
 }
+
+@media (max-width: 1100px) {
+  main {
+    padding: 1rem;
+  }
+  .content-timer {
+    margin-right: 10rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  main {
+    padding: 1rem;
+  }
+  .content-timer {
+    margin-right: 8rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  main {
+    padding: 1rem;
+  }
+  .content-timer {
+    margin-right: 8rem;
+  }
+}
+
+@media (max-width: 768px) {
+  main {
+    max-width: 62.1rem; 
+    max-height: 33.6rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  input {
+    max-width: 60%;
+    position: relative;
+    bottom: 1.2rem;
+    right: 8.5rem;
+  }
+
+  section {
+    margin-top: 6rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-template-areas: 
+    'img1 img1'
+    'img2 img2';
+    gap: 3.2rem;
+  }
+}
+
+@media (max-width: 425px) {
+  main {
+    padding: .1rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .wrapper-timer{
+    display: flex;
+    font-size: 6.5rem;
+    margin-left: 9rem;
+    margin-bottom: 2rem;
+  }
+
+  .wrapper-icons {
+    display: flex;
+    margin-top: .1rem;
+    margin-left: 9rem;
+    gap: 2rem;
+  }
+
+  input {
+    display: flex;
+    max-width: 50%;
+    position: relative;
+    bottom: 2rem;
+    left: 2rem;
+
+  }
+
+  section {
+    flex-direction: column;
+    grid-template-areas: 
+    'img1 img1'
+    'img2 img2';
+  }
+
+  .LightAndDarkMode {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+  }
+
+}
+
+@media (max-width: 320px) {
+  main {
+    padding: .1rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  section {
+    margin-top: 3rem;
+    flex-direction: column;
+    grid-template-areas: 
+    'img1 img1'
+    'img2 img2';
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+
+  .LightAndDarkMode {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+  }
+
+}
+
+
