--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ button {
 input {
   max-width: 60%;
   position: relative;
-  bottom: 3.2rem
+  bottom: 2.5rem;
 }
 
 input[type='range']::-webkit-slider-runnable-track{
